1.4.0: catalog translations (CatalogItem::translate(), translateCategory()), language in search
